objects/Account.object
<CustomObject>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Account Termination Date</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Platform__c</fullName>
        <label>Testing Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adobe Target</fullName>
                </value>
                <value>
                    <fullName>Dynamic Yield</fullName>
                </value>
                <value>
                    <fullName>Home Grown</fullName>
                </value>
                <value>
                    <fullName>Maximizer</fullName>
                </value>
                <value>
                    <fullName>Monetate</fullName>
                </value>
                <value>
                    <fullName>Optimizely</fullName>
                </value>
                <value>
                    <fullName>Sitespect</fullName>
                </value>
                <value>
                    <fullName>VWO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Ahead_Search__c</fullName>
        <description>Used to indicate if using type ahead search (Y/N) flag.</description>
        <inlineHelpText>Used to indicate if using type ahead search (Y/N) flag.</inlineHelpText>
        <label>Type Ahead Search</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Analytics_Tool__c</fullName>
        <description>Installed web analytics tool</description>
        <inlineHelpText>Installed web analytics tool</inlineHelpText>
        <label>Web Analytics Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A/B Tasty</fullName>
                </value>
                <value>
                    <fullName>CoreMetrics</fullName>
                </value>
                <value>
                    <fullName>Fireclick</fullName>
                </value>
                <value>
                    <fullName>ForeSee</fullName>
                </value>
                <value>
                    <fullName>Google Analytics</fullName>
                </value>
                <value>
                    <fullName>IndexTools</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Net-Insight</fullName>
                </value>
                <value>
                    <fullName>Omniture</fullName>
                </value>
                <value>
                    <fullName>Retek</fullName>
                </value>
                <value>
                    <fullName>Webmetrics</fullName>
                </value>
                <value>
                    <fullName>Webtrekk</fullName>
                </value>
                <value>
                    <fullName>WebTrends</fullName>
                </value>
                <value>
                    <fullName>Yahoo!</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SaaS</fullName>
        <active>true</active>
        <description>SaaS</description>
        <label>SaaS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_sysadmin_can_change_owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Id  &lt;&gt; &quot;00e0G000000i87w&quot;,$Profile.Id  &lt;&gt; &quot;00e0G0000014wpx&quot;,$Profile.Id  &lt;&gt; &quot;00eF0000000awFL&quot;,$Profile.Id  &lt;&gt; &quot;00eF00000016579&quot;,AND($Profile.Id  &lt;&gt; &quot;00eF0000000awFP&quot;, RecordType.Id &lt;&gt; &quot;012F0000000qjB0&quot;    )) &amp;&amp; ISCHANGED( OwnerId )</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Only system admins can change the ownership.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_Package_for_Customers</fullName>
        <active>true</active>
        <description>Support Package is required when the Account Relationship changes to &quot;Customer&quot;.</description>
        <errorConditionFormula>and
(
ISPICKVAL( Account_Relationship__c , &quot;Customer&quot;), 
ISBLANK( text(Support_Package__c )) 
)</errorConditionFormula>
        <errorDisplayField>Support_Package__c</errorDisplayField>
        <errorMessage>For Customers, you must select a Support Package before the record can be saved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_Region</fullName>
        <active>false</active>
        <description>Support Region only required when Relationship = Customer.</description>
        <errorConditionFormula>and
(
ISPICKVAL( Account_Relationship__c , &quot;Customer&quot;), 
ISBLANK( text(Support_Region__c )) 
)</errorConditionFormula>
        <errorDisplayField>Support_Region__c</errorDisplayField>
        <errorMessage>Support Region only required when Relationship = Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_Region_for_Partners</fullName>
        <active>true</active>
        <description>Support Region is required for Accounts that are partners</description>
        <errorConditionFormula>and 
( 
ISPICKVAL( Type , &quot;Partner&quot;), 
ISBLANK( text(Support_Region__c )),
NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorDisplayField>Support_Region__c</errorDisplayField>
        <errorMessage>A Support Region is required for all partners so that cases opened by partners can be routed to the correct support team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_cannot_change_Account_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Id &lt;&gt;&quot;00e0G000000i87w&quot;,$Profile.Id &lt;&gt; &quot;00eF0000000awFL&quot;,$Profile.Id &lt;&gt; &quot;00eF00000016579&quot; ,$UserRole.Id &lt;&gt; &quot;00EF00000015a10&quot;, $UserRole.Id &lt;&gt; &quot;00EF00000015a2I&quot; , OR($Profile.Id &lt;&gt; &quot;00eF0000000awFP&quot;, RecordType.Id == &quot;012F0000000qjB0&quot; )) &amp;&amp; ISCHANGED(  Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Only system admins can change Account Names</errorMessage>
    </validationRules>
</CustomObject>